--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-compare-slider": "^3.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
