--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.12.4",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-compare-slider": "^3.0.1",
