--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-compare-slider": "^3.0.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-slick": "^0.30.2",
     "styled-components": "^6.1.8"
