--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "homepage": "https://solexpert.in/"
+    "homepage": "https://solexpert.in/",
+    "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
     "axios": "^1.7.3",
@@ -27,6 +28,7 @@
     "react-icons": "^5.0.1",
     "react-lazyload": "^3.2.1",
     "react-slick": "^0.30.2",
+    "sitemap": "^8.0.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
