--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-compare-slider": "^3.0.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.13.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-lazyload": "^3.2.1",
     "react-slick": "^0.30.2",
+    "react-type-animation": "^3.2.0",
     "sitemap": "^8.0.0",
     "styled-components": "^6.1.8"
   },
