--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^12.3.0",
     "firebase-functions": "^5.0.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.5.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
